fix background and add gap in landing page

--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -77,9 +77,21 @@ hr.hr-home{
 	background-color: #F9F9F9;
 }
 
+#gap{
+	height: 50%;
+}
+
+.gap-bg-home{
+	height: 100%;
+	background-image:url(/assets/img/gap_bg.jpg);
+	background-size: cover;
+	background-position: center;
+}
+
 #news{
 	/*min-height: 500px;*/
-	background-color: #E8E8E8;
+	background-color: #F1F1F1;
+	padding-bottom: 30px;
 }
 
 #news h2{
@@ -105,6 +117,7 @@ hr.hr-home{
 
 #song{
 	background-color: #F9F9F9;
+	padding-bottom: 30px;
 }
 
 #song dt a{
@@ -125,7 +138,8 @@ hr.hr-home{
 }
 
 #video{
-	background-color: #E8E8E8;
+	background-color: #F1F1F1;
+	padding-bottom: 30px;
 }
 
 #video h2{
@@ -134,6 +148,7 @@ hr.hr-home{
 
 #gallery{
 	background-color: #F9F9F9;
+	padding-bottom: 30px;
 }
 
 #gallery h2{
@@ -168,7 +183,8 @@ hr.hr-home{
 }
 
 #merchandise{
-	background-color: #E8E8E8;
+	background-color: #F1F1F1;
+	padding-bottom: 30px;
 }
 
 #merchandise h2{
@@ -178,6 +194,7 @@ hr.hr-home{
 #member{
 	color: #000000;
 	background-color: #F9F9F9;
+	padding-bottom: 30px;
 }
 
 .member-img-home{
